[package]
name        = "karet-image"
description = "Terminal image rendering (halfblocks/Kitty/Sixel/iTerm2) for karet TUI editors."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[features]
default = []
# ratatui image widget (halfblocks renderer to start).
view = ["dep:ratatui"]
# TODO per-protocol features (halfblocks/kitty/sixel/iterm2) once an encoder is chosen.
# NOTE: the `ratatui-image` crate is a candidate backend but its build script
# requires the system C library `chafa` (libchafa-dev >= 1.8.0), so it is left
# unwired here to keep the skeleton buildable without system dependencies.

[dependencies]
image.workspace = true
thiserror.workspace = true
ratatui = { workspace = true, optional = true }

[lints]
workspace = true
