[package]
name        = "karet-lsp"
description = "Async LSP client for karet TUI editors (diagnostics, completion, hover, goto, symbols, inlay hints, …)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme = "README.md"
keywords.workspace     = true
categories.workspace   = true

# Headless by design: emits neutral `karet-core` models. The ratatui popups that
# used to live behind a `view` feature now live in `karet-widgets`, so this crate
# pulls no UI deps and stays cheaply publishable (closure = just `karet-core`).
[dependencies]
karet-core.workspace = true
async-lsp.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "io-util", "process", "macros", "sync"] }
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
