[package]
name        = "karet-session"
description = "Headless editor backend for karet: owns documents and workspace, orchestrates producers, applies commands, emits events."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true
publish = false                       # karet-internal backend — pulls the whole logic tree

[features]
default = ["github", "aicommit"]
# Lazily fetch a commit's "Verified" status from the GitHub REST API (the commit
# view's signature badge). On by default; turn it off for a fully offline / pure-Rust
# build (drops the reqwest + rustls dependency tree). The badge then stays "Signed".
github = ["dep:karet-github"]
# Generate a commit message from the staged diff by shelling out to the `claude`
# CLI (via aicommit-core). On by default; turn it off to drop the dependency. The
# runtime `git.aiCommit.enabled` setting gates it further without a rebuild.
aicommit = ["dep:aicommit-core"]

[dependencies]
karet-core = { workspace = true, features = ["serde"] }   # serde-ready seam models
karet-text.workspace = true
karet-filetype.workspace = true       # classify a document to pick its on-disk codec
karet-cbor.workspace = true           # decode/encode CBOR ↔ editable diagnostic text
karet-treesitter.workspace = true
karet-syntax.workspace = true
karet-diff.workspace = true
karet-lsp.workspace = true            # headless
karet-dap.workspace = true            # headless
karet-vcs.workspace = true                  # headless; writes use the installed git executable
blameline.workspace = true # current-buffer line blame; workspace disables language features
karet-github = { workspace = true, optional = true }    # GitHub commit-verification (feature `github`)
aicommit-core = { workspace = true, optional = true }   # AI commit-message generation (feature `aicommit`)
karet-search.workspace = true
karet-fuzzy.workspace = true
karet-terminal.workspace = true       # PTY host is server-side business logic
karet-watch.workspace = true          # centralized filesystem watching
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "macros", "process", "time"] }
tracing.workspace = true
thiserror.workspace = true
ec4rs.workspace = true                # settings / editorconfig precedence (migrated from the app)
spellbook.workspace = true            # spell-check → diagnostics (migrated from the app)
directories.workspace = true          # server-side config / session paths
serde = { workspace = true }          # derive Deserialize/Serialize for the Settings schema
serde_json.workspace = true           # the merge/deserialize target for JSONC config
jsonc-parser.workspace = true         # parse JSONC config files (byte-span diagnostics)
schemars.workspace = true             # generate the external JSON Schema from `Settings`
dependable-core.workspace = true      # Cargo.lock → package dependency graph (offline)
tempfile.workspace = true             # atomic swap-file writes + open/save flow tests

[dev-dependencies]
# Compile in the Rust + Markdown grammars so the Command/snapshot contract test can
# assert that an *injected* language really is highlighted through the worker.
karet-treesitter = { workspace = true, features = ["lang-rust", "lang-markdown"] }

[lints]
workspace = true
