[package]
name        = "karet-syntax"
description = "Tree-sitter syntactic analysis (highlighting, fold regions, brackets) for karet TUI editors."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true
publish = false                       # karet-internal — not published to crates.io

[features]
default = []

[dependencies]
karet-core.workspace = true
karet-treesitter.workspace = true
thiserror.workspace = true
# NOTE: highlighting runs the grammar's query through karet-treesitter's single
# parse host (not tree-sitter-highlight), honoring the single-parse-host design.

[dev-dependencies]
# Compile in the Rust grammar so the end-to-end highlight test is self-contained.
karet-treesitter = { workspace = true, features = ["lang-rust"] }

[lints]
workspace = true
