[package]
name        = "karet-text"
description = "Headless rope text-editing model (buffer, undo/redo, cursors & selections) for karet TUI editors."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true

[features]
default = []
# Memory-mapped read backend for very large files.
mmap = ["dep:memmap2"]

[dependencies]
karet-core.workspace = true
ropey.workspace = true
memchr.workspace = true                # fast line-ending scanning (load/save, EOL detection)
tempfile.workspace = true              # atomic crash-safe save (temp + fsync + rename)
unicode-segmentation.workspace = true  # reserved for cursor word/grapheme motions
smallvec.workspace = true              # reserved for multi-cursor selection storage
thiserror.workspace = true
memmap2 = { workspace = true, optional = true }

[lints]
workspace = true
