[package]
name        = "karet-watch"
description = "Debounced filesystem watching for karet editors: a neutral FsEvent stream."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true
publish = false                       # karet-internal infrastructure

[dependencies]
notify.workspace = true
notify-debouncer-full.workspace = true
ignore.workspace = true               # gitignore-aware directory enumeration to watch
tokio = { workspace = true, features = ["sync"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true             # scratch trees for the watcher integration tests

[lints]
workspace = true
