[package]
name        = "karet-widgets"
description = "Reusable ratatui widget toolkit for editors (file tree, picker, palette, status bar, dialogs, panes, …)."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true
publish = false                       # karet-internal UI toolkit — not published to crates.io

[features]
default = []

[dependencies]
karet-core.workspace = true
karet-fuzzy.workspace = true
karet-markdown.workspace = true       # hover/doc popup rendering (relocated LSP popups)
karet-theme = { workspace = true, features = ["view"] }  # role colors for the widgets
ratatui.workspace = true
image.workspace = true                # merged from the former karet-image crate
ignore.workspace = true
unicode-width.workspace = true
thiserror.workspace = true

[lints]
workspace = true
