[package]
name        = "karet"
description = "A VS Code–parity TUI code editor built from the karet-* toolkit."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme = "README.md"
keywords.workspace     = true
categories.workspace   = true
publish = false                       # the demo application is not published to crates.io
build   = "build.rs"                  # embeds build provenance into `karet -V` (see build.rs)

[[bin]]
name = "karet"
path = "src/main.rs"

# Heavy media renderers are optional so a lean build drops their dependency trees
# (issue #23). Both are ON by default, so the shipped binary is unchanged; a
# `--no-default-features` build compiles without the `image` codec tree or `hayro`.
[features]
default = ["images", "pdf"]
# Decode & render raster image files (pulls the `image` codec stack via
# karet-fileview's `images` feature, which implies its shared `raster` primitives).
images = ["karet-fileview/images"]
# View PDF documents: rasterize pages (pulls `hayro` via karet-pdf) and display
# them through karet-fileview's shared terminal-image primitives (`raster`).
pdf = ["dep:karet-pdf", "karet-fileview/raster"]

[dependencies]
# Presentation/client half + the headless backend it drives through the Command/Event seam.
karet-core.workspace = true
karet-filetype.workspace = true       # icon-style choice (`--icons`) shared with the widgets
karet-session.workspace = true
karet-text       = { workspace = true, features = ["mmap"] }
karet-treesitter = { workspace = true, features = ["all-languages"] }
karet-syntax.workspace = true
karet-theme      = { workspace = true, features = ["view", "vscode"] }
karet-diff.workspace = true
karet-markdown   = { workspace = true, features = ["view", "highlight"] }
karet-cbor.workspace = true           # decode .cbor to editable diagnostic text
karet-terminal   = { workspace = true, features = ["view"] }
karet-dap        = { workspace = true, features = ["view"] }
karet-vcs        = { workspace = true, features = ["view"] }
karet-graph      = { workspace = true, features = ["view"] }
blameline        = { workspace = true, features = ["all-languages"] }
karet-search.workspace = true
karet-fuzzy.workspace = true
karet-widgets.workspace = true
karet-editor.workspace = true
karet-fileview.workspace = true       # read-only "render any file" primitives (hex/image/placeholder)
karet-pdf = { workspace = true, optional = true }  # rasterize PDF pages (pure-Rust hayro); behind the `pdf` feature
# External (app-level orchestration: runtime, CLI, plus the merged clipboard/input modules).
ratatui.workspace = true
crossterm.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
color-eyre.workspace = true
directories.workspace = true
ignore.workspace = true              # quick-open file listing (gitignore-aware)
thiserror.workspace = true           # error types for the merged clipboard/input modules
base64.workspace = true              # `clipboard` module (OSC 52), merged from karet-clipboard
toml.workspace = true                # `input` module keymap config, merged from karet-input
serde.workspace = true               # `input` module keymap config
serde_json.workspace = true          # loaded-settings inspector formatting

[dev-dependencies]
tempfile.workspace = true            # temp roots for the desktop-entry executor tests

# Build-time only: reuse the existing pure-Rust `gix` (already pinned with `status`)
# to read the commit / dirty / commit-time provenance baked into `karet -V`. No new
# dependency and no external `git` binary — see build.rs.
[build-dependencies]
gix.workspace = true

# The application is intentionally NOT a stable-API library, so it does not inherit
# the strict workspace library lints (`[lints] workspace = true` is omitted): it may
# use unwrap/expect/anyhow freely. clippy's defaults still apply, enforced via
# `-D warnings` in CI.
